--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">APOD</string>
+    <string name="button_ok">OK</string>
+    <string name="button_cancel">CANCEL</string>
 </resources>
